# OpenSpace

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  pnpm-lock.yaml
solidity-advance/src/: Basic.sol  BuiltIn.sol  ERC1155.sol  GasOptimization.sol  InlineAssembly.sol
w1d1/: Cargo.toml  Makefile
w1d1-pow-rsa/: Cargo.toml  Makefile  README.md
w1d1-pow-rsa/examples/: pow.rs  rsa.rs
w1d1/examples/: pow.rs
w1d1/examples/min_blockchain_py/: min_blockchian_ans.py  model.py  route.py
w1d2-min-blockchian/min_blockchain_py/: main.py
w1d2-min-blockchian/min_blockchain_rs/: README.md
w1d2/min_blockchain_py/: min_blockchian_ans.py  model.py  route.py
w1d3/: README.md
w1d3-first-solidity-contract/counter-contract/: 01_Counter.sol
w1d3/bank-contract/: Bank.sol
w1d3/counter-contract/: 01_Counter.sol
w1d4-bank/bank-contract/: Bank.sol
w1d5/: Interface.sol  Modifier.sol
w1d5-big-bank/: Modifier.sol
w1d5-big-bank/big-bank/: Bank.sol
w1d5/big-bank/: Bank.sol  BigBank.sol
w2d1/: BaseERC20.sol  BaseERC20WithOpenzeppelin.sol  TokenBank.sol
w2d1-ERC20/: BaseERC20.sol  BaseERC20WithOpenzeppelin.sol
w2d1-ERC20/ref-code/: OpenZeppelin-ERC20.sol
w2d1/ref-code/: Consensys-EIP20.sol  OpenZeppelin-ERC20.sol
w2d2/: NoahNFTMarket.sol  README.md
w2d2&w2d3/: README.md
w2d2&w2d3/01_NFT&NFTMarket/: NoahNFT.sol  NoahNFTMarket.sol  (+1 more)
w2d5/: foundry.toml
w3d1/: package.json  pnpm-lock.yaml
w3d1-viem/: tsconfig.json
w3d4-MPC/: README.md
w4d6-dune/: holder-counter.sql  holder-detail.sql
w5d2-dex/: foundry.toml  remappings.txt
(+134 files in other folders)
