[package]
name = "w1d1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
env_logger = "0.11.3"
hex-literal = "0.4.1"
log = "0.4.21"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] }
sha2 = "0.10.8"

tokio = { version = "^1.35", features = ["full"] }
# Serde / json
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
# Axum
axum = { version = "^0.7", features = ["macros"] }
tower = "^0.4"
tower-cookies = "^0.10"
tower-http = { version = "^0.5", features = ["fs"] }
# Others
lazy-regex = "^3.1"
async-trait = "^0.1.74"
strum_macros = "^0.26"
uuid = { version = "^1.6", features = ["v4", "fast-rng"] }
serde_with = "^3.4"


[dev-dependencies]
anyhow = "^1.0"
httpc-test = "^0.1"
